# llomax

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
src/llomax/: __init__.py  __main__.py  models.py  output.py  pipeline.py
src/llomax/analysis/: __init__.py  annotator.py  client.py  segmenter.py
src/llomax/composition/: __init__.py  composer.py
src/llomax/core/: __init__.py  hooks.py
src/llomax/hooks/: __init__.py  agentic_composer.py  background.py  llm_composer.py  palette.py
src/llomax/search/: __init__.py  agent.py  curator.py  internet_archive_agent.py  mcp.py  parsing.py  thumbnails.py
src/llomax/search/clients/: __init__.py  ia_client.py  internet_archive_client.py
tests/: test_analysis_client.py  test_composer.py  test_hooks.py  test_output.py  test_search_agent.py  test_yolo_client.py
